--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,152 +8,84 @@ on:
 
 jobs:
   formatting:
-    name: "🔧 Formatting & Lint"
+    name: "🔧 Format & Lint"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-        continue-on-error: true
 
-      - name: Install dependencies
-        run: npm ci
-        continue-on-error: true
-
-      - name: Prettier format
-        run: npm run format
-        continue-on-error: true
-
-      - name: ESLint lint
-        run: npm run lint
-        continue-on-error: true
+      - run: npm ci
+      - run: npm run format
+      - run: npm run lint
 
   backend:
-    name: "✅ Backend Build & Test"
+    name: "✅ Backend Tests"
     runs-on: ubuntu-latest
-    needs: [formatting]
-    if: ${{ always() }}
+    needs: formatting
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-        continue-on-error: true
 
-      - name: Install backend deps
-        run: npm --workspace backend ci
-        continue-on-error: true
-
-      - name: Backend format
-        run: npm --workspace backend run format
-        continue-on-error: true
-
-      - name: Backend lint
-        run: npm --workspace backend run lint
-        continue-on-error: true
-
-      - name: Build backend
-        run: npm --workspace backend run build
-        continue-on-error: true
-
-      - name: Backend tests
-        run: npm --workspace backend run test
-        continue-on-error: true
-
-  frontend:
-    name: "🌐 Frontend Build & Test"
-    runs-on: ubuntu-latest
-    needs: [backend]
-    if: ${{ always() }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-        continue-on-error: true
-
-      - name: Install frontend deps
-        run: npm --workspace frontend ci
-        continue-on-error: true
-
-      - name: Frontend format
-        run: npm --workspace frontend run format
-        continue-on-error: true
-
-      - name: Frontend lint
-        run: npm --workspace frontend run lint
-        continue-on-error: true
-
-      - name: Build frontend
-        run: npm --workspace frontend run build
-        continue-on-error: true
-
-      - name: Frontend tests
-        run: npm --workspace frontend run test:unit
-        continue-on-error: true
-
-      - name: Install Playwright browsers
-        run: npm --workspace frontend exec playwright install --with-deps
-        continue-on-error: true
-
-      - name: Frontend E2E
-        run: npm --workspace frontend run test:e2e
-        continue-on-error: true
+      - run: npm --workspace backend ci
+      - run: npm --workspace backend run test
 
   crawler:
-    name: "🤖 Crawler Build & Run"
+    name: "🤖 Crawler Tests"
     runs-on: ubuntu-latest
-    needs: [frontend]
-    if: ${{ always() }}
+    needs: formatting
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        continue-on-error: true
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
+
+      - run: npm --workspace crawler ci
+      - run: npm --workspace crawler run test
+
+  newsletters:
+    name: "✉️ Newsletters Tests"
+    runs-on: ubuntu-latest
+    needs: formatting
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - run: npm --workspace newsletters ci
+      - run: npm --workspace newsletters run test
+
+  frontend:
+    name: "🌐 Frontend Tests"
+    runs-on: ubuntu-latest
+    needs: formatting
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - run: npm --workspace frontend ci
+      - run: npm --workspace frontend run test:unit
         continue-on-error: true
 
-      - name: Install crawler deps
-        run: npm --workspace crawler ci
-        continue-on-error: true
-
-      - name: Crawler format
-        run: npm --workspace crawler run format
-        continue-on-error: true
-
-      - name: Crawler lint
-        run: npm --workspace crawler run lint
-        continue-on-error: true
-
-      - name: Build crawler
-        run: npm --workspace crawler run build
-        continue-on-error: true
-
-      - name: Run crawl job
-        run: npm --workspace crawler run crawl
+      - name: e2e (Playwright)
+        run: npm --workspace frontend exec playwright install --with-deps && npm --workspace frontend run test:e2e
         continue-on-error: true
 
   complete:
-    name: "🎉 Pipeline Complete"
+    name: "🎉 All Done"
     runs-on: ubuntu-latest
-    needs: [formatting, backend, frontend, crawler]
+    needs: [backend, crawler, newsletters, frontend]
     if: ${{ always() }}
     steps:
-      - name: Final status
-        run: echo "✅ CI/CD pipeline finished successfully."
+      - run: echo "✅ Formatting, linting and required tests passed."
