--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,9 +2,9 @@ name: CI Pipeline AI Content Curator
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   formatting:
@@ -13,31 +13,28 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node 18
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install root deps
+      - name: Install all workspaces
         run: npm ci
 
-      - name: Prettier format
+      - name: Run Prettier
         run: npm run format
 
-      - name: ESLint lint
+      - name: Run ESLint
         run: npm run lint
 
   backend:
     name: "✅ Backend Tests"
     runs-on: ubuntu-latest
     needs: formatting
-    env:
-      GOOGLE_AI_API_KEY: dummy
-      GOOGLE_AI_API_KEY1: dummy
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node 18
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -46,7 +43,7 @@ jobs:
         run: npm --workspace backend ci
 
       - name: Run backend tests
-        run: npm --workspace backend run test
+        run: npm --workspace backend test
 
   crawler:
     name: "🤖 Crawler Tests"
@@ -55,7 +52,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node 18
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -64,7 +61,7 @@ jobs:
         run: npm --workspace crawler ci
 
       - name: Run crawler tests
-        run: npm --workspace crawler run test
+        run: npm --workspace crawler test
 
   newsletters:
     name: "✉️ Newsletters Tests"
@@ -73,7 +70,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node 18
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -82,17 +79,16 @@ jobs:
         run: npm --workspace newsletters ci
 
       - name: Run newsletters tests
-        run: npm --workspace newsletters run test
+        run: npm --workspace newsletters test
 
   frontend:
-    name: "🌐 Frontend E2E (allowed to fail)"
+    name: "🌐 Frontend E2E"
     runs-on: ubuntu-latest
     needs: formatting
-    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node 18
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -104,12 +100,12 @@ jobs:
         run: npm --workspace frontend exec playwright install --with-deps
 
       - name: Run frontend E2E
-        run: npm --workspace frontend run test:e2e
+        run: npm --workspace frontend test:e2e
+        continue-on-error: true
 
   complete:
     name: "🎉 All Required Tests Passed"
     runs-on: ubuntu-latest
-    needs: [backend, crawler, newsletters]
-    if: ${{ success() }}
+    needs: [ backend, crawler, newsletters ]
     steps:
-      - run: echo "✅ Formatting, linting, backend, crawler and newsletters tests all passed."
+      - run: echo "✅ Backend, crawler & newsletters tests all passed; frontend E2E is best-effort."
