--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,11 +7,9 @@ on:
     branches: [ master ]
 
 env:
-  # Provide dummy API keys so chat.controller tests don't blow up
+  # provide dummy keys so chat & topic-extractor tests don’t blow up
   NEWS_API_KEY: dummy
   GOOGLE_AI_API_KEY: dummy
-  REGISTRY: ghcr.io
-  IMAGE_NAMESPACE: ${{ github.repository }}
 
 jobs:
   formatting:
@@ -25,7 +23,7 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
+      - name: Install all workspaces
         run: npm ci
 
       - name: Run Prettier
@@ -41,11 +39,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install & run backend tests
+      - name: Install & Test Backend
         run: |
           npm --workspace backend ci
           npm --workspace backend test
@@ -57,14 +56,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install & run crawler tests
-        run: |
-          npm --workspace crawler ci
-          npm --workspace crawler test
+      # ensure all devDeps are present
+      - name: Install all workspaces
+        run: npm ci
+
+      - name: Run Crawler Tests
+        run: npm --workspace crawler run test
 
   newsletters:
     name: "✉️ Newsletters Tests"
@@ -73,11 +75,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install & run newsletters tests
+      - name: Install & Test Newsletters
         run: |
           npm --workspace newsletters ci
           npm --workspace newsletters test
@@ -89,39 +92,41 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install & run frontend E2E
+      - name: Install & Run Frontend E2E
         run: |
           npm --workspace frontend ci
           npm --workspace frontend exec playwright install --with-deps
           npm --workspace frontend run test:e2e
         continue-on-error: true
 
+  complete:
+    name: "🎉 All Required Tests Passed"
+    runs-on: ubuntu-latest
+    needs: [ backend, crawler, newsletters ]
+    steps:
+      - run: echo "✅ Backend, crawler & newsletters tests all passed; frontend E2E is best‐effort."
+
   docker:
     name: "🐳 Build & Push Docker Images"
     runs-on: ubuntu-latest
-    needs:
-      - backend
-      - crawler
-      - newsletters
+    needs: complete
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GHCR
+      - name: Log in to registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & push backend image
         uses: docker/build-push-action@v3
@@ -130,8 +135,8 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/backend:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/backend:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-backend:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-backend:latest
 
       - name: Build & push crawler image
         uses: docker/build-push-action@v3
@@ -140,8 +145,8 @@ jobs:
           file: ./crawler/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/crawler:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/crawler:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-crawler:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-crawler:latest
 
       - name: Build & push newsletters image
         uses: docker/build-push-action@v3
@@ -150,8 +155,8 @@ jobs:
           file: ./newsletters/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/newsletters:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/newsletters:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-newsletters:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-newsletters:latest
 
       - name: Build & push frontend image
         uses: docker/build-push-action@v3
@@ -160,15 +165,5 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/frontend:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAMESPACE }}/frontend:${{ github.sha }}
-
-  complete:
-    name: "🎉 All Required Tests & Docker Artifacts"
-    runs-on: ubuntu-latest
-    needs:
-      - docker
-      - frontend
-    if: ${{ always() }}
-    steps:
-      - run: echo "✅ Tests passed and Docker images built & pushed."
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-frontend:${{ github.sha }}
+            ${{ secrets.DOCKER_REGISTRY }}/ai-curator-frontend:latest
