--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,16 +55,12 @@ jobs:
     needs: formatting
     steps:
       - uses: actions/checkout@v3
-
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      # ensure all devDeps are present
       - name: Install all workspaces
         run: npm ci
-
       - name: Run Crawler Tests
         run: npm --workspace crawler run test
 
@@ -74,12 +70,10 @@ jobs:
     needs: formatting
     steps:
       - uses: actions/checkout@v3
-
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install & Test Newsletters
         run: |
           npm --workspace newsletters ci
@@ -110,6 +104,44 @@ jobs:
     needs: [ backend, crawler, newsletters ]
     steps:
       - run: echo "✅ Backend, crawler & newsletters tests all passed; frontend E2E is best‐effort."
+
+  code-scan:
+    name: "🔍 Code Scanning"
+    runs-on: ubuntu-latest
+    needs: [ backend, crawler, newsletters ]
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install all workspaces
+        run: npm ci
+      - name: Static code analysis with Semgrep
+        uses: semgrep/semgrep-action@v1
+        with:
+          config: p/default
+          timeout: 60
+          continue-on-error: true
+
+  dependency-audit:
+    name: "📦 Dependency Audit"
+    runs-on: ubuntu-latest
+    needs: [ backend, crawler, newsletters ]
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install all workspaces
+        run: npm ci
+      - name: npm audit
+        run: npm audit --audit-level=high || true
+      - name: npm audit fix (dry run)
+        run: npm audit fix --dry-run || true
 
   docker:
     name: "🐳 Build & Push Docker Images"
@@ -167,3 +199,58 @@ jobs:
           tags: |
             ghcr.io/hoangsonww/ai-curator-frontend:${{ github.sha }}
             ghcr.io/hoangsonww/ai-curator-frontend:latest
+
+  image-vuln-scan:
+    name: "🔍 Docker Image Vulnerability Scan"
+    runs-on: ubuntu-latest
+    needs: docker
+    continue-on-error: true
+    steps:
+      - name: Scan backend image
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ghcr.io/hoangsonww/ai-curator-backend:latest
+          format: table
+          exit-code: 0
+      - name: Scan crawler image
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ghcr.io/hoangsonww/ai-curator-crawler:latest
+          format: table
+          exit-code: 0
+      - name: Scan newsletters image
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ghcr.io/hoangsonww/ai-curator-newsletters:latest
+          format: table
+          exit-code: 0
+      - name: Scan frontend image
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ghcr.io/hoangsonww/ai-curator-frontend:latest
+          format: table
+          exit-code: 0
+
+  license-check:
+    name: "📜 License Compliance"
+    runs-on: ubuntu-latest
+    needs: docker
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install all workspaces
+        run: npm ci
+      - name: Generate license report
+        run: npx license-checker --production --json > license-report.json || true
+      - name: Upload license report
+        uses: actions/upload-artifact@v4
+        with:
+          name: license-report
+          path: license-report.json
+
+  finalize:
+    name: "🚀 Pipeline Complete"
+    runs-on: ubuntu-latest
+    needs: [ docker, image-vuln-scan, license-check ]
+    steps:
+      - run: echo "✅ CI/CD pipeline for SynthoraAI completed successfully."
