--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -121,21 +121,20 @@ jobs:
     name: "🔍 Code Scanning"
     runs-on: ubuntu-latest
     needs: [ backend, crawler, newsletters ]
-    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
+
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Install all workspaces
         run: npm ci
+
       - name: Static code analysis with Semgrep
-        uses: semgrep/semgrep-action@v1
-        with:
-          config: p/default
-          timeout: 60
-          continue-on-error: true
+        run: semgrep ci --config p/default --timeout 60 || true
+        continue-on-error: true
 
   dependency-audit:
     name: "📦 Dependency Audit"
